@@ -188,25 +188,25 @@ public class FIBProperty<T> {
 
 	public T getDefaultValue() {
 		if (type.equals(Integer.TYPE)) {
-			return (T) new Integer(0);
+			return (T) Integer.valueOf(0);
 		}
 		if (type.equals(Short.TYPE)) {
-			return (T) new Short((short) 0);
+			return (T) Short.valueOf((short) 0);
 		}
 		if (type.equals(Long.TYPE)) {
-			return (T) new Long(0);
+			return (T) Long.valueOf(0);
 		}
 		if (type.equals(Byte.TYPE)) {
-			return (T) new Byte((byte) 0);
+			return (T) Byte.valueOf((byte) 0);
 		}
 		if (type.equals(Double.TYPE)) {
-			return (T) new Double(0);
+			return (T) Double.valueOf(0);
 		}
 		if (type.equals(Float.TYPE)) {
-			return (T) new Float(0);
+			return (T) Float.valueOf(0);
 		}
 		if (type.equals(Character.TYPE)) {
-			return (T) new Character('a');
+			return (T) Character.valueOf('a');
 		}
 		if (type.equals(Boolean.TYPE)) {
 			return (T) Boolean.FALSE;
